[s390] interpreter misses exception check after calling monitorenter

XMLWordPrintable

    • b20
    • s390x

        The s390 template interpreter currently uses call_VM with check_exceptions = false when calling InterpreterRuntime::monitorenter.

        Async Exceptions don't get installed at this place because JRT_ENTRY_NO_ASYNC is used and InterpreterRuntime::monitorenter doesn't throw any Exceptions normally.

        But there's a possibility to install an Exception:
        - JVMTI supports post_monitor_contended_enter etc.
        - Native function for MonitorContendedEnter is called via JNI
        - Native code can install an Exception
        - Exception should be handled after return from InterpreterRuntime::monitorenter

        Other platforms support that. s390 should do so, too.

              Assignee:
              Martin Doerr
              Reporter:
              Martin Doerr
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: