8254190: [s390] interpreter misses exception check after calling monitorenter

Reviewed-by: shade, rrich